# sentencias

./: -deploy.txt actualizado  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.deploy  FORMULARIO_METADATOS_GUIA.md  LICENSE  MEJORAS_INMEDIATAS.md  PIPENV_GUIDE.md  PROYECTO_REORGANIZADO.md  Pipfile  README.md  REFACTOR_SUMMARY.md  ROADMAP.md  TASKS.md  analizador.py  app-deploy.py  app-minimal.py  app-restored.py  app.py  config.py  create_jira_issues.py  de documentos en análisis híbrido  debug_app.py  demanda_final.docx  docker-compose.yml  install.bat  install.sh  jira_diagnostic.py  jira_import.csv  pyproject.toml  pytest.ini  render.yaml  requirements-deploy-lite.txt  requirements-deploy.txt  requirements.DOCKER.txt  requirements.txt  (+18 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  test-colab-notebook.yml
backend/: analisis.py  analisis_discrepancias.py  analisis_predictivo.py
deployment/: Dockerfile
deployment/nginx/: nginx.conf
docs/: ANALISIS_DISCREPANCIAS.md  ANALISIS_PREDICTIVO.md  ANALISIS_RIESGO_PONDERACION.md  API.md  API_ENDPOINTS.md  Analizador_Sentencias_Colab.ipynb  COLAB_BADGES.md  COLAB_INSTRUCTIONS.md  CONFIGURACION.md  CONFIGURACION_PONDERACION.md  DEPLOYMENT.md  DEVELOPMENT.md  EJEMPLO_PRACTICO_PONDERACION.md  ENTRENAMIENTO_MODELOS.md  FLUJO_PONDERACION.md  GENERACION_DEMANDAS.md  LIBRERIAS_MODELOS.md  README.md  README_COLAB.md  README_PONDERACION.md  RELEASE_NOTES.md
models/: README.md  frases_clave.json  labels.json  labels_ejemplo.json  modelo_legal.pkl  modelo_legal_metadatos.json  modelo_legal_sbert.pkl
monitoring/: prometheus.yml
proyecto_ipp_inss/backend/: analisis.py
proyecto_ipp_inss/sentencias/: ejemplo_sentencia.txt
scripts/: entrenar_modelos.py  requirements-deploy-lite.txt  requirements-deploy.txt  requirements.txt  requirements_current.txt  verificar_dependencias.py
sentencias/: .gitkeep  documento_actual.txt  ejemplo_sentencia.txt  segunda_sentencia.txt
sentencias_app/: __init__.py  config.py  main.py  observability.py  security.py
sentencias_app/backend/: train_embeddings.py
src/: app-deploy.py  app.py
src/backend/: __init__.py  analisis.py  analisis_discrepancias.py  analisis_predictivo.py  main.py  train_embeddings.py  train_model.py
src/static/: style.css
src/templates/: analisis_predictivo.html  archivo.html  diagnostico.html  index.html  subir.html
templates/: analisis_discrepancias.html  analisis_predictivo.html  archivo.html  formulario_metadatos.html  index.html  index_backup.html  resultado.html
tests/: __init__.py  conftest.py  test_api.py  test_security.py  test_templates.py
